syntax = "proto3";

import "google/protobuf/empty.proto";
package tags;

service TagsService {
  rpc Create (CreateTag) returns (google.protobuf.Empty);
  rpc Search (SearchTags) returns (SearchResults);
}

enum MediaType {
  AUDIO = 0;
  VIDEO = 1;
  PHOTO = 2;
  DOCUMENT = 3;
  GIF = 4;
  MPEG4_GIF = 5;
}

message CreateTag {
  int64 authorUserId = 1;
  MediaType type = 2;
  string fileUniqueId = 3;
  string fileId = 4;
  optional string fileName = 5;
  repeated string values = 6;
}

message SearchTags {
  string query = 1;
  int32 limit = 2;
  optional int64 authorUserId = 3;
}

message SearchResults {
  repeated SearchResultItem items = 1;
}

message SearchResultItem {
  string fileId = 1;
  MediaType type = 2;
  optional string fileName = 3;
}
